[metadata]
name = clay
version= 3.0
author = Juan-Pablo Scaletti
author_email = juanpablo@jpscaletti.com
description = An amazing web prototyping tool.
long_description = file:README.md
long_description_content_type = text/markdown
url = http://lucuma.github.io/Clay/
license = Apache License Version 2.0
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3

[options]
include_package_data = true
packages = find:
python_requires = >=3.6,<4.0
install_requires =
    gunicorn ~= 19.9.0
    hecto ~= 1.0
    jinja2 ~= 2.10
    pyceo ~= 2.191002
    pyyaml ~= 5.1.2
    whitenoise ~= 4.1.4

[options.packages.find]
exclude =
    tests

[options.extras_require]
testing =
    pytest
    pytest-cov

dev =
    pytest
    pytest-cov
    flake8
    ipdb
    tox


[flake8]
max-complexity = 10
max-line-length = 88

statistics = true
doctests = True
accept-encodings = utf-8

select = C,E,F,W,B,B950
# W503 line break before binary operator
# E203 whitespace before ':'
# D100  Missing docstring in public module
# D101  Missing docstring in public class
# D102  Missing docstring in public method
# D103  Missing docstring in public function
# D104  Missing docstring in public package
# D105  Missing docstring in magic method
# D107  Missing docstring in __init__
ignore = W503,E203,D100,D101,D102,D103,D104,D105,D107

[tool:pytest]
addopts = --doctest-modules
