[metadata]
name = clay
version= 4.4
author = Juan-Pablo Scaletti
author_email = juanpablo@jpscaletti.com
description = An amazing web prototyping tool.
long_description = file:README.md
long_description_content_type = text/markdown
url = http://lucuma.github.io/clay/
project_urls =
    Documentation = http://lucuma.github.io/clay/
    Issue tracker = https://github.com/lucuma/clay/issues
license = MIT
license_files = MIT-LICENSE
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
include_package_data = true
packages = find:
python_requires = >=3.7,<4.0
install_requires =
    gunicorn ~=20.0
    jinja2 ~=3.0
    multipart >=0.2.4
    proper-cli ~=1.0
    pyyaml ~=5.1
    whitenoise ~=4.1

[options.packages.find]
exclude =
    tests

[options.extras_require]
test =
    flake8
    flake8-bugbear
    flake8-logging-format
    flake8-quotes
    pytest
    pytest-cov
    webtest

dev =
    black
    tox

[options.entry_points]
console_scripts =
    clay = clay.cli:cli


[flake8]
application-package-names = clay
application-import-names = clay
import-order-style = pycharm

select =
  B,  # bugbear
  C,  # mccabe, comprehensions, commas
  E,  # pycodestyle errors
  F,  # pyflakes
  G,  # logging format
  I,  # imports
  P,
  Q,  # quotes
  T4,  # mypy
  W,  # pycodestyle warnings

ignore =
    C901,  # x is too complex
    E203,  # whitespace before ':'
    E501,
    F405,  # x defined from star imports
    W503,  # line break before binary operator
    W605,

max-line-length = 98
max-complexity = 10

inline-quotes = double
multiline-quotes = double
docstring-quotes = double

exclude =
  .git,
  .venv
  __pycache__,
  conftest.py,
  docs,


[tool:pytest]
addopts = --doctest-modules
